feat: solve search bug